<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/holo_orange_light">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="20sp"
            android:textColor="#000000"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eq_params"
            android:textSize="20sp"
            android:textColor="#000000"
            android:gravity="center"/>
        <LinearLayout
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/num_eq"
                android:textSize="20sp"
                android:textColor="#000000"
                android:gravity="center"/>
            <EditText
                android:id="@+id/num_eq_et_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="2"
                android:maxLines="1"
                android:lines="1"
                android:singleLine="true"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_by"
                android:textSize="20sp"
                android:textColor="#000000"
                android:gravity="center"/>
            <Spinner
                android:id="@+id/order_by_spinner_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/start_date_btn_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textSize="20sp"
                android:background="@android:color/holo_orange_light"
                style="?android:attr/borderlessButtonStyle"/>
            <TextView
                android:layout_marginLeft="10sp"
                android:id="@+id/start_date_tv_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_date"
                android:textSize="20sp"
                android:textColor="#000000"
                android:gravity="center"/>
        </LinearLayout>
        <Button
            android:id="@+id/submit_btn_id"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:background="@android:color/holo_orange_dark"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>